# protec

./: .SRCINFO  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  PKGBUILD  PKGBUILD.git  PKGBUILD.local  README.md  minor-update.sh
.github/workflows/: package-release.yml  package.yml  rust.yml  validate.sh
src/: main.rs  terminos.rs  window.rs
